# sinew-broke

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  plugin.toml  pyproject.toml  release-please-config.json  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: anthropic-request.json  openai-request.json
scripts/: install-shell-integrations.sh
shell/: ai-costs.zsh
src/ai_costs/: __init__.py  cli.py  models.py  price_table.py  service.py  settings.py  storage.py  utils.py  wrappers.py
src/ai_costs/pricing/: anthropic.json  openai.json
src/ai_costs/providers/: __init__.py  anthropic_api.py  base.py  claude_code.py  glm.py  gpt_subscription.py  minimax.py  openai_api.py  openrouter.py
tests/: test_claude_code.py  test_service.py  test_storage.py  test_wrappers.py
