[project]
name = "ai-costs"
version = "0.1.1"
description = "Track AI cost, credits, quotas, and subscription windows — Sinew status-bar plugin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Kevin Frilot" }]
keywords = ["ai", "costs", "llm", "openai", "anthropic", "usage", "sinew"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/dungle-scrubs/sinew-broke"
Repository = "https://github.com/dungle-scrubs/sinew-broke"
Issues = "https://github.com/dungle-scrubs/sinew-broke/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "ty>=0.0.1a19",
]

[project.scripts]
ai-costs = "ai_costs.cli:main"
ai-costs-openai = "ai_costs.cli:openai_wrapper_main"
ai-costs-anthropic = "ai_costs.cli:anthropic_wrapper_main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_costs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

